# zouipocar

./: .clang-format  .gitignore  LICENSE  README.md
common/: Fix.h  common_constants.h
embedded/: Makefile  README.md
embedded/src/: at.c  at.h  bit.c  bit.h  constants.h  fix.h  gps.c  gps.h  interrupt.c  interrupt.h  main.c  mc60.c  mc60.h  pin.c  pin.h  return_codes.h  time_utils.c  time_utils.h  uart.c  uart.h
server/: CMakeLists.txt  README.md  gps-server.service
server/cmake/: src.cmake
server/scripts/: package.sh
server/src/: Database.cpp  Database.hpp  Fix.cpp  Fix.hpp  HTTPServer.cpp  HTTPServer.hpp  UDP.cpp  UDP.hpp  constants.hpp  httplib.h  main.cpp  tools.cpp  tools.hpp
server/src/http/: ErrorMessages.cpp  ErrorMessages.hpp  HTTPServer.cpp  HTTPServer.hpp
server/test/: CMakeLists.txt  TestDatabase.cpp  TestFix.cpp  TestHTTPServer.cpp  TestTools.cpp  TestUDP.cpp  test_tools.cpp  test_tools.hpp
server/test/test_resources/: test.db
server/www/: index.html  timeline.html
server/www/css/: style.css  timeline.css
server/www/js/: ajax.js  index.js  map.js  timeline.js  utils.js
